--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -17,6 +17,8 @@
   <script src="spec/blinkyDancerSpec.js"></script>
   <script src="src/dancer.js"></script>
   <script src="src/blinkyDancer.js"></script>
+       <script src="src/animated_dancer.js"></script>
+      <script src="src/sizedDancer.js"></script>
 </head>
 <body>
 <div id="mocha"></div>
