--- a/dancefloor.html
+++ b/dancefloor.html
@@ -6,11 +6,17 @@
     <script src="lib/jquery.js"></script>
     <script src="src/dancer.js"></script>
     <script src="src/blinkyDancer.js"></script>
+     <script src="src/animated_dancer.js"></script>
+      <script src="src/sizedDancer.js"></script>
   </head>
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>    </div>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>  
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeAnimatedDancer">add a animated dancer</a>    
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeSizedDancer">add a faded dancer</a> 
+      <a href="#" class="addDancerButton" id='lineup'>Lineup</a>
+    </div>  
     <script src="src/init.js"></script>
   </body>
 </html>
