--- a/dancefloor.html
+++ b/dancefloor.html
@@ -11,10 +11,9 @@
   </head>
   <body>
     <div class="topbar">
-      <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>  
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeAnimatedDancer">add a animated dancer</a>    
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeSizedDancer">add a faded dancer</a> 
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">Blinky Dancer</a>  
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeCenterDancer">To The Center</a>    
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeSizedDancer">Fade away</a> 
       <a href="#" class="addDancerButton" id='lineup'>Lineup</a>
     </div>  
     <script src="src/init.js"></script>
