--- a/dancefloor.html
+++ b/dancefloor.html
@@ -11,10 +11,11 @@
   </head>
   <body>
     <div class="topbar">
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">Blinky Dancer</a>  
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeCenterDancer">To The Center</a>    
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeSizedDancer">Fade away</a> 
-      <a href="#" class="addDancerButton" id='lineup'>Lineup</a>
+      <a class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">Good Dancer</a>  
+      <a class="addDancerButton" data-dancer-maker-function-name="makeCenterDancer">Bad Dancer</a>    
+      <a class="addDancerButton" data-dancer-maker-function-name="makeSizedDancer">Confused Dancer</a> 
+      <a class="addDancerButton" data-dancer-maker-function-name="makeSizedDancer">Cant Dance Dancer</a> 
+      <a class="addDancerButton" data-dancer-maker-function-name="makeSizedDancer">Cant Dance Dancer</a> 
     </div>  
     <script src="src/init.js"></script>
   </body>
