--- a/dancefloor.html
+++ b/dancefloor.html
@@ -12,8 +12,8 @@
   <body>
     <div class="topbar">
       <a class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">Good Dancer</a>  
-      <a class="addDancerButton" data-dancer-maker-function-name="makeCenterDancer">Bad Dancer</a>    
-      <a class="addDancerButton" data-dancer-maker-function-name="makeSizedDancer">Confused Dancer</a> 
+      <a class="addDancerButton" data-dancer-maker-function-name="badDancer">Bad Dancer</a>    
+      <a class="addDancerButton" data-dancer-maker-function-name="badDancer">Confused Dancer</a> 
       <a class="addDancerButton" data-dancer-maker-function-name="makeSizedDancer">Cant Dance Dancer</a> 
       <a class="addDancerButton" data-dancer-maker-function-name="makeSizedDancer">Cant Dance Dancer</a> 
     </div>  
