--- a/dancefloor.html
+++ b/dancefloor.html
@@ -5,17 +5,21 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <script src="lib/jquery.js"></script>
     <script src="src/dancer.js"></script>
-    <script src="src/blinkyDancer.js"></script>
-     <script src="src/animated_dancer.js"></script>
-      <script src="src/sizedDancer.js"></script>
+      <script src="src/goodDancer.js"></script>
+      <script src="src/badDancer.js"></script>
+      <script src="src/greatDancer.js"></script>
+      <script src="src/cantDanceDancer.js"></script>
+      <script src="src/confusedDancer.js"></script>
+      
   </head>
   <body>
     <div class="topbar">
-      <a class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">Good Dancer</a>  
-      <a class="addDancerButton" data-dancer-maker-function-name="badDancer">Bad Dancer</a>    
-      <a class="addDancerButton" data-dancer-maker-function-name="badDancer">Confused Dancer</a> 
-      <a class="addDancerButton" data-dancer-maker-function-name="makeSizedDancer">Cant Dance Dancer</a> 
-      <a class="addDancerButton" data-dancer-maker-function-name="makeSizedDancer">Cant Dance Dancer</a> 
+      <a href='#' class="addDancerButton" data-dancer-maker-function-name="goodDancer">Good Dancer</a>  
+      <a href='#' class="addDancerButton" data-dancer-maker-function-name="badDancer">Bad Dancer</a> 
+      <a href='#' class="addDancerButton" data-dancer-maker-function-name="cantDanceDancer">Cant Dance Dancer</a> 
+      <a href='#' class="addDancerButton" data-dancer-maker-function-name="greatDancer">Great Dancer</a> 
+      <a href='#' class="addDancerButton" data-dancer-maker-function-name="confusedDancer">Confused Dancer</a> 
+      <a href='#' class="Lineup">Lineup</a> 
     </div>  
     <script src="src/init.js"></script>
   </body>
