--- a/dancefloor.html
+++ b/dancefloor.html
@@ -20,6 +20,7 @@
       <a href='#' class="addDancerButton" data-dancer-maker-function-name="greatDancer">Great Dancer</a> 
       <a href='#' class="addDancerButton" data-dancer-maker-function-name="confusedDancer">Confused Dancer</a> 
       <a href='#' class="Lineup">Lineup</a> 
+      <a href='#' class="interact">interact</a> 
     </div>  
     <script src="src/init.js"></script>
   </body>
